--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>POS System</h1>
+        <h1>POS System Demo</h1>
         <nav>
             <a href="/">Products</a> |
             <a href="/make_sale">Make Sale</a> |
